--- a/Celebrity/UIViews/Subviews/TeamResultView.xib
+++ b/Celebrity/UIViews/Subviews/TeamResultView.xib
@@ -13,82 +13,47 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view contentMode="scaleToFill" restorationIdentifier="TeamResultView" id="iN0-l3-epB" customClass="TeamResultView" customModule="Celebrity" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="496"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="qtA-rR-oGG">
-                    <rect key="frame" x="94" y="40" width="187.5" height="80"/>
-                    <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vwi-MN-o6M">
-                            <rect key="frame" x="0.0" y="0.0" width="187.5" height="35"/>
-                            <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Round Review" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0B0-YH-TL8">
-                                    <rect key="frame" x="0.0" y="7.5" width="187.5" height="20.5"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <nil key="textColor"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                            </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="35" id="4hd-cm-udl"/>
-                                <constraint firstItem="0B0-YH-TL8" firstAttribute="centerX" secondItem="vwi-MN-o6M" secondAttribute="centerX" id="BbL-hN-gTd"/>
-                                <constraint firstItem="0B0-YH-TL8" firstAttribute="width" secondItem="vwi-MN-o6M" secondAttribute="width" id="D6G-HY-SzX"/>
-                                <constraint firstItem="0B0-YH-TL8" firstAttribute="centerY" secondItem="vwi-MN-o6M" secondAttribute="centerY" id="Pac-UF-UHs"/>
-                            </constraints>
-                        </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N0j-H4-LIT">
-                            <rect key="frame" x="0.0" y="45" width="187.5" height="35"/>
-                            <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1 More Round !" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ElJ-QT-caK">
-                                    <rect key="frame" x="0.0" y="7.5" width="187.5" height="20.5"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <nil key="textColor"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                            </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <constraints>
-                                <constraint firstItem="ElJ-QT-caK" firstAttribute="width" secondItem="N0j-H4-LIT" secondAttribute="width" id="5Eb-lR-1PS"/>
-                                <constraint firstAttribute="height" constant="35" id="gUP-Vk-0gz"/>
-                                <constraint firstItem="ElJ-QT-caK" firstAttribute="centerX" secondItem="N0j-H4-LIT" secondAttribute="centerX" id="sp3-36-ikO"/>
-                                <constraint firstItem="ElJ-QT-caK" firstAttribute="centerY" secondItem="N0j-H4-LIT" secondAttribute="centerY" id="zGd-QC-8lj"/>
-                            </constraints>
-                        </view>
-                    </subviews>
-                </stackView>
-                <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="cGY-sy-VNK">
-                    <rect key="frame" x="84" y="140" width="206.5" height="20.5"/>
-                    <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rHr-HL-vYs">
-                            <rect key="frame" x="0.0" y="0.0" width="42" height="20.5"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i41-MK-apN">
-                            <rect key="frame" x="164.5" y="0.0" width="42" height="20.5"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                    </subviews>
-                </stackView>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="0wb-lz-KH4">
+                    <rect key="frame" x="0.0" y="59.5" width="375" height="397"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="bGI-0W-vd1">
+                        <size key="itemSize" width="50" height="50"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fQk-7b-gcT">
+                    <rect key="frame" x="0.0" y="466" width="375" height="30"/>
+                    <state key="normal" title="Play Again">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <connections>
+                        <action selector="playAgain:" destination="iN0-l3-epB" eventType="touchUpInside" id="E1z-M5-YtQ"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="cGY-sy-VNK" firstAttribute="centerX" secondItem="qtA-rR-oGG" secondAttribute="centerX" id="F3y-y0-Qx1"/>
-                <constraint firstItem="qtA-rR-oGG" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="20" id="dUU-RP-T2r"/>
-                <constraint firstItem="qtA-rR-oGG" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.5" id="nT1-Hq-RHF"/>
-                <constraint firstItem="qtA-rR-oGG" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="oK6-WD-JnS"/>
-                <constraint firstItem="cGY-sy-VNK" firstAttribute="top" secondItem="qtA-rR-oGG" secondAttribute="bottom" constant="20" id="pMf-tx-0U1"/>
-                <constraint firstItem="cGY-sy-VNK" firstAttribute="width" secondItem="qtA-rR-oGG" secondAttribute="width" multiplier="1.1" id="zyA-Qe-uhn"/>
+                <constraint firstItem="0wb-lz-KH4" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" id="1JE-nX-cXY"/>
+                <constraint firstItem="0wb-lz-KH4" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="GBG-Fm-tkv"/>
+                <constraint firstItem="fQk-7b-gcT" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" id="OMa-CD-sew"/>
+                <constraint firstItem="0wb-lz-KH4" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="X8v-Z9-K4i"/>
+                <constraint firstItem="0wb-lz-KH4" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.8" id="Z2o-wK-qfA"/>
+                <constraint firstItem="fQk-7b-gcT" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="aKl-2O-iLL"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="fQk-7b-gcT" secondAttribute="bottom" id="izL-sE-p2R"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <connections>
+                <outlet property="collectionView" destination="0wb-lz-KH4" id="UNF-jt-upv"/>
+            </connections>
             <point key="canvasLocation" x="-123.5" y="124"/>
         </view>
     </objects>
