--- a/Celebrity/UIViews/Subviews/TeamResultView.xib
+++ b/Celebrity/UIViews/Subviews/TeamResultView.xib
@@ -17,6 +17,12 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="496"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EeX-oF-WUh">
+                    <rect key="frame" x="0.0" y="41" width="375" height="0.0"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <nil key="highlightedColor"/>
+                </label>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="0wb-lz-KH4">
                     <rect key="frame" x="0.0" y="59.5" width="375" height="397"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -46,6 +52,9 @@
                 <constraint firstItem="0wb-lz-KH4" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.8" id="Z2o-wK-qfA"/>
                 <constraint firstItem="fQk-7b-gcT" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="aKl-2O-iLL"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="fQk-7b-gcT" secondAttribute="bottom" id="izL-sE-p2R"/>
+                <constraint firstItem="EeX-oF-WUh" firstAttribute="centerX" secondItem="0wb-lz-KH4" secondAttribute="centerX" id="j2S-6j-vub"/>
+                <constraint firstItem="0wb-lz-KH4" firstAttribute="top" secondItem="EeX-oF-WUh" secondAttribute="bottom" constant="18.5" id="rcS-P8-OSk"/>
+                <constraint firstItem="EeX-oF-WUh" firstAttribute="width" secondItem="0wb-lz-KH4" secondAttribute="width" id="x63-5H-JSe"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
@@ -53,6 +62,7 @@
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
                 <outlet property="collectionView" destination="0wb-lz-KH4" id="UNF-jt-upv"/>
+                <outlet property="lblRcount" destination="EeX-oF-WUh" id="JFZ-mJ-MBT"/>
             </connections>
             <point key="canvasLocation" x="-123.5" y="124"/>
         </view>
